added us water companies

--- a/billfinder.ipynb
+++ b/billfinder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a1204c32-ee3c-4b1e-9a69-17448ed34ca0",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "66b2c68f-ba3f-4d17-b8fd-8baa1ddd74f1",
    "metadata": {},
    "outputs": [],
@@ -22,14 +22,16 @@
     "    \n",
     "    def __init__(self):\n",
     "        \n",
-    "        self.source_urls = {'Canada': 'https://en.wikipedia.org/wiki/List_of_Canadian_electric_utilities',\n",
-    "                            'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_electric_companies',\n",
-    "                            'UK': 'https://www.utilitysavingexpert.com/energy/suppliers/'}\n",
+    "        self.source_urls_energy = {'Canada': 'https://en.wikipedia.org/wiki/List_of_Canadian_electric_utilities',\n",
+    "                                   'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_electric_companies',\n",
+    "                                   'UK': 'https://www.utilitysavingexpert.com/energy/suppliers/'}\n",
+    "        \n",
+    "        self.source_urls_water = {'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_water_companies'}\n",
     "    \n",
     "    def get_energy_companies(self, country: str = None):\n",
     "    \n",
     "        company_set = set()\n",
-    "        soup = BeautifulSoup(requests.get(self.source_urls[country]).text)\n",
+    "        soup = BeautifulSoup(requests.get(self.source_urls_energy[country]).text)\n",
     "        \n",
     "        if country == 'Canada':\n",
     "            for t in soup.find_all('table', role=\"presentation\"):\n",
@@ -55,12 +57,29 @@
     "                            \n",
     "        print(f'found {len(company_set):,} companies')\n",
     "                        \n",
+    "        return company_set\n",
+    "    \n",
+    "    def get_water_companies(self, country: str = None):\n",
+    "    \n",
+    "        company_set = set()\n",
+    "        soup = BeautifulSoup(requests.get(self.source_urls_water[country]).text)\n",
+    "        \n",
+    "        if country == 'USA':\n",
+    "            for t in soup.find_all('h2'):\n",
+    "                if t.find_all('a', href=True):\n",
+    "                    if list_of_company_names := t.find_next_sibling('ul'):\n",
+    "                        for name_line in list_of_company_names.find_all('li'):\n",
+    "                            if company_name := name_line.text.strip():\n",
+    "                                company_set.add(company_name)\n",
+    "                            \n",
+    "        print(f'found {len(company_set):,} companies')\n",
+    "                        \n",
     "        return company_set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1eb69da0-84ec-425c-9dfc-72b2cb4e8115",
    "metadata": {},
    "outputs": [],
@@ -75,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bf.get_energy_companies(country='UK')"
+    "bf.get_water_companies(country='USA')"
    ]
   }
  ],
