added UK water companies

--- a/billfinder.ipynb
+++ b/billfinder.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "66b2c68f-ba3f-4d17-b8fd-8baa1ddd74f1",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,8 @@
     "                                   'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_electric_companies',\n",
     "                                   'UK': 'https://www.utilitysavingexpert.com/energy/suppliers/'}\n",
     "        \n",
-    "        self.source_urls_water = {'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_water_companies'}\n",
+    "        self.source_urls_water = {'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_water_companies',\n",
+    "                                  'UK': 'https://en.wikipedia.org/wiki/United_Kingdom_water_companies'}\n",
     "    \n",
     "    def get_energy_companies(self, country: str = None):\n",
     "    \n",
@@ -71,6 +72,26 @@
     "                        for name_line in list_of_company_names.find_all('li'):\n",
     "                            if company_name := name_line.text.strip():\n",
     "                                company_set.add(company_name)\n",
+    "        elif country == 'UK':\n",
+    "            for s in soup.find('span', id='Water_and_sewerage').parent.next_siblings:\n",
+    "                if s.name == 'table':\n",
+    "                    for row in s.find_all('tr'):\n",
+    "                        if tds := row.find_all('td'):\n",
+    "                            company_set.add(tds[0].text.strip()) \n",
+    "                    break\n",
+    "            for s in soup.find('span', id='Water_only').parent.next_siblings:\n",
+    "                if s.name == 'table':\n",
+    "                    for row in s.find_all('tr'):\n",
+    "                        if tds := row.find_all('td'):\n",
+    "                            company_set.add(tds[0].text.strip()) \n",
+    "                    break\n",
+    "                    \n",
+    "            for id_ in ['Scotland', 'Northern_Ireland', 'Crown_dependencies']:\n",
+    "                for s in soup.find('span', id=id_).parent.next_siblings:\n",
+    "                    if s.name == 'ul':\n",
+    "                        for item_ in s.find_all('li'):\n",
+    "                            company_set.add(item_.text)\n",
+    "                        break\n",
     "                            \n",
     "        print(f'found {len(company_set):,} companies')\n",
     "                        \n",
@@ -79,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "1eb69da0-84ec-425c-9dfc-72b2cb4e8115",
    "metadata": {},
    "outputs": [],
@@ -89,13 +110,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "876c0097-79d2-4227-8404-9d4bd961d1b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found 30 companies\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Affinity Water',\n",
+       " 'Albion Water',\n",
+       " 'Anglian Water',\n",
+       " 'Bournemouth Water',\n",
+       " 'Bristol Water',\n",
+       " 'Cambridge Water Company',\n",
+       " 'Cholderton and District Water Company',\n",
+       " 'Dŵr Cymru Welsh Water',\n",
+       " 'Essex and Suffolk Water',\n",
+       " 'Everflow[2]',\n",
+       " 'Guernsey Water (government)',\n",
+       " 'Hafren Dyfrdwy',\n",
+       " 'Hartlepool Water',\n",
+       " 'Isle of Man Water Authority (government)',\n",
+       " 'Jersey Water (private)',\n",
+       " 'Northern Ireland Water (government)',\n",
+       " 'Northumbrian Water',\n",
+       " 'Portsmouth Water',\n",
+       " 'Scottish Water (government)',\n",
+       " 'Severn Trent Water',\n",
+       " 'South East Water',\n",
+       " 'South Staffordshire Water',\n",
+       " 'South West Water',\n",
+       " 'Southern Water',\n",
+       " 'Sutton and East Surrey Water',\n",
+       " 'Thames Water',\n",
+       " 'United Utilities',\n",
+       " 'Wessex Water',\n",
+       " 'Yorkshire Water',\n",
+       " 'Youlgrave Waterworks'}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bf.get_water_companies(country='USA')"
+    "bf.get_water_companies(country='UK')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "672bca48-19fa-4fd1-ae93-0001100d9e32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
