--- a/billfinder.ipynb
+++ b/billfinder.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 176,
    "id": "66b2c68f-ba3f-4d17-b8fd-8baa1ddd74f1",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,10 @@
     "        self.source_urls_water = {'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_water_companies',\n",
     "                                  'UK': 'https://en.wikipedia.org/wiki/United_Kingdom_water_companies'}\n",
     "        \n",
-    "        self.source_urls_gas = {'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_natural_gas_companies'}\n",
+    "        self.source_urls_gas = {'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_natural_gas_companies',\n",
+    "                                'UK': 'https://en.wikipedia.org/wiki/List_of_British_natural_gas_companies'}\n",
+    "        \n",
+    "        self.stop_words = 'company inc corporation ltd'.split()\n",
     "    \n",
     "    def get_energy_companies(self, country: str = None):\n",
     "    \n",
@@ -111,7 +114,19 @@
     "                for c in unidecode(list_item.text).split('-')[1].split(','):\n",
     "                    if company_name := c.strip():\n",
     "                        company_set.add(company_name)\n",
-    "                        \n",
+    "        elif country == 'UK':\n",
+    "            for _ in soup.find(lambda t: (t.name == 'p') and ('Utilities' in t.text)).next_siblings:\n",
+    "                if _.name == 'ul':\n",
+    "                    for list_item in _.find_all('li'):\n",
+    "                        if s := list_item.text.strip():\n",
+    "                            if '(' not in s:\n",
+    "                                company_set.add(s)\n",
+    "                            else:\n",
+    "                                for st in re.split(r'[(),]| and ', s):\n",
+    "                                    if potential_name := ' '.join([w for w in st.split() if (w.isupper() or w.istitle()) and w.lower() not in self.stop_words]).strip():\n",
+    "                                        company_set.add(potential_name)\n",
+    "                    break\n",
+    "\n",
     "        print(f'found {len(company_set):,} companies')\n",
     "        \n",
     "        return company_set"
@@ -119,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 177,
    "id": "1eb69da0-84ec-425c-9dfc-72b2cb4e8115",
    "metadata": {},
    "outputs": [],
@@ -129,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 178,
    "id": "876c0097-79d2-4227-8404-9d4bd961d1b7",
    "metadata": {},
    "outputs": [
@@ -137,181 +152,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "found 159 companies\n"
+      "found 23 companies\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Aquila',\n",
-       " 'Arkansas Oklahoma Gas Corporation',\n",
-       " 'Atmos Energy',\n",
-       " 'Avista Utilities',\n",
-       " 'Bangor Gas',\n",
-       " 'Berkshire Gas',\n",
-       " 'Black Hills Energy',\n",
-       " 'Black Hills Energy.',\n",
-       " 'Blackstone Gas Company',\n",
-       " 'Bluefield Natural Gas',\n",
-       " 'CNX Resources',\n",
-       " 'Cascade Natural Gas',\n",
-       " 'CenterPoint Energy',\n",
-       " 'CenterPoint Energy Florida Gas Transmission Company',\n",
-       " 'CenterPoint Energy Gas Transmission',\n",
-       " 'Central Hudson Gas & Electric',\n",
-       " 'Chesapeake Energy',\n",
-       " 'Chesapeake Operating Inc',\n",
-       " 'Chesapeake Utilities',\n",
-       " 'Chester County Gas Authority',\n",
-       " 'City Utilities of Springfield',\n",
-       " 'City of Ellensburg',\n",
-       " 'City of Long Beach Gas & Oil Department',\n",
-       " 'City of Norwich Department of Public Utilities',\n",
-       " 'City of Palo Alto Gas Department',\n",
-       " 'CoServ Gas',\n",
-       " 'Colonial Gas',\n",
-       " 'Columbia Gas',\n",
-       " 'Columbia Gas of Maryland',\n",
-       " 'Columbia Gas of Massachusetts',\n",
-       " 'Columbia Gas of Ohio',\n",
-       " 'Columbia Gas of Virginia',\n",
-       " 'ConocoPhillips',\n",
-       " 'Consolidated Edison',\n",
-       " 'Consumers Energy',\n",
-       " 'Cut Bank Gas Company',\n",
-       " 'DTE Energy',\n",
-       " 'Delmarva Power',\n",
-       " 'Direct Energy',\n",
-       " 'Dominion',\n",
-       " 'Dominion Carolina Gas Transmission',\n",
-       " 'Dominion Energy',\n",
-       " 'Duke Energy',\n",
-       " 'EQT Corporation',\n",
-       " 'East Ohio Gas',\n",
-       " 'El Paso Natural Gas',\n",
-       " 'Elizabethtown Gas',\n",
-       " 'Energir',\n",
-       " 'Energy West Montana',\n",
-       " 'Enstar Natural Gas',\n",
-       " 'Entergy',\n",
-       " 'Eversource Energy',\n",
-       " 'Eversource Energy (via Yankee Gas)',\n",
-       " 'Fairbanks Natural Gas',\n",
-       " 'Florida Gas Transmission Company',\n",
-       " 'Florida Public Utilities',\n",
-       " 'Fort Hill Natural Gas Authority',\n",
-       " 'Fountain Inn Natural Gas',\n",
-       " 'Frontier Natural Gas',\n",
-       " 'Gas South',\n",
-       " 'Gulf South Pipe Line',\n",
-       " \"Hawai'i Gas\",\n",
-       " 'Holyoke Gas and Electric',\n",
-       " 'Hudson Energy',\n",
-       " 'Illinois Gas Transmission',\n",
-       " 'Inc.',\n",
-       " 'Integrys',\n",
-       " 'Intermountain Gas Company',\n",
-       " 'J',\n",
-       " 'Kansas Gas Service',\n",
-       " 'Kinder Morgan',\n",
-       " 'LLC',\n",
-       " 'Laclede Gas',\n",
-       " 'Lake Apopka Natural Gas',\n",
-       " 'Lewis Energy',\n",
-       " 'Liberty Utilities',\n",
-       " 'MDU Resources',\n",
-       " 'Madison Gas & Electric',\n",
-       " 'Maine Natural Gas',\n",
-       " 'Metropolitan Utilities District',\n",
-       " 'MidAmerican Energy Company',\n",
-       " 'Middleboro Municipal Gas and Electric Department',\n",
-       " 'Mirabito Gas',\n",
-       " 'Mississippi River Transmission',\n",
-       " 'Missouri Gas Energy',\n",
-       " 'Mountaineer Gas Company',\n",
-       " 'Murex Petroleum',\n",
-       " 'NV Energy',\n",
-       " 'National Fuel Gas',\n",
-       " 'National Grid',\n",
-       " 'National Grid USA',\n",
-       " 'New Jersey Natural',\n",
-       " 'New Jersey Resources',\n",
-       " 'New Mexico Gas (NMG)',\n",
-       " 'New York State Electric & Gas (NYSEG)',\n",
-       " 'NiSource',\n",
-       " 'Nicor Gas',\n",
-       " 'Nisource',\n",
-       " 'North Shore Gas',\n",
-       " 'Northeast Ohio Natural Gas',\n",
-       " 'Northwest Natural Gas',\n",
-       " 'Northwestern Corporation',\n",
-       " 'ONEOK',\n",
-       " 'Oklahoma Gas & Electric',\n",
-       " 'Oklahoma Natural Gas',\n",
-       " 'Oro Negro',\n",
-       " 'Orwell Natural Gas',\n",
-       " 'PECO Energy Company',\n",
-       " 'Pacific Gas & Electric',\n",
-       " 'Panhandle Eastern Pipe Line',\n",
-       " 'Patara Oil & Gas',\n",
-       " 'Patara Oil & Gas LLC',\n",
-       " 'Patriots Energy Group',\n",
-       " \"People's Gas\",\n",
-       " 'Peoples Gas',\n",
-       " 'Peoples Natural Gas',\n",
-       " 'Philadelphia Gas Works',\n",
-       " 'Piedmont Natural Gas',\n",
-       " 'Public Service Electric and Gas (PSE&G)',\n",
-       " 'Public Service Enterprise Group',\n",
-       " 'Public Service of North Carolina (PSNC)',\n",
-       " 'Puget Sound Energy',\n",
-       " 'Rochester Gas & Electric (RG&E)',\n",
-       " 'SCANA Corporation Lancaster County Natural Gas Authority',\n",
-       " 'SCE&G',\n",
-       " 'San Diego Gas & Electric',\n",
-       " 'Semco Energy',\n",
-       " 'SiEnergy',\n",
-       " 'Sierra Pacific',\n",
-       " 'SourceGas Arkansas Inc.',\n",
-       " 'SourceGas Distribution',\n",
-       " 'South Jersey Industries',\n",
-       " 'Southern California Gas',\n",
-       " 'Southern Company Gas',\n",
-       " 'Southwest Gas Corporation',\n",
-       " 'Spectra Energy',\n",
-       " 'Spire',\n",
-       " 'Spire Inc',\n",
-       " 'Summit Natural Gas',\n",
-       " 'TECO Peoples Gas',\n",
-       " 'Texas Gas Service',\n",
-       " 'Texas Natural Gas',\n",
-       " 'TransCanada',\n",
-       " 'Transwestern Pipeline',\n",
-       " 'Trunkline Gas Company',\n",
-       " 'UGI',\n",
-       " 'UIL Holdings Corp (via Connecticut Natural Gas and Southern Connecticut Gas)',\n",
-       " 'Unitil Corp.',\n",
-       " 'Unitil Corporation',\n",
-       " 'Vectrennipsco',\n",
-       " 'Virginia Natural Gas',\n",
-       " 'Wakefield Municipal Gas and Light Department',\n",
-       " 'Washington Gas',\n",
-       " 'We Energies',\n",
-       " 'Westfield Gas and Electric Department',\n",
-       " 'XOOM Energy',\n",
-       " 'Xcel Energy',\n",
-       " 'York County Gas Authority',\n",
-       " 'metl'}"
+       "{'British Gas',\n",
+       " 'British Natural Gas',\n",
+       " 'Bulb',\n",
+       " 'Centrica',\n",
+       " 'E.ON',\n",
+       " 'EDF Energy',\n",
+       " 'HM British Natural Gas',\n",
+       " 'London Energy',\n",
+       " 'Niccolo',\n",
+       " 'Npower',\n",
+       " 'Nwy Prydain',\n",
+       " 'Ovo Energy',\n",
+       " 'Powergen Retail',\n",
+       " 'RWE',\n",
+       " 'SSE',\n",
+       " 'SWEB Energy',\n",
+       " 'Scottish Gas',\n",
+       " 'Scottish Hydro',\n",
+       " 'Scottish Power',\n",
+       " 'Seeboard',\n",
+       " 'Southern Electric',\n",
+       " 'Swalec',\n",
+       " 'Total Gas & Power'}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bf.get_gas_companies(country='USA')"
+    "bf.get_gas_companies(country='UK')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a744ebb-74dc-4428-b6be-68a216f79692",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
