output as dictionary

--- a/billfinder.ipynb
+++ b/billfinder.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 179,
    "id": "a1204c32-ee3c-4b1e-9a69-17448ed34ca0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import re\n",
+    "from collections import defaultdict\n",
     "from unidecode import unidecode\n",
     "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 184,
    "id": "66b2c68f-ba3f-4d17-b8fd-8baa1ddd74f1",
    "metadata": {},
    "outputs": [],
@@ -35,6 +36,8 @@
     "                                'UK': 'https://en.wikipedia.org/wiki/List_of_British_natural_gas_companies'}\n",
     "        \n",
     "        self.stop_words = 'company inc corporation ltd'.split()\n",
+    "        \n",
+    "        self.collected_companies = defaultdict()\n",
     "    \n",
     "    def get_energy_companies(self, country: str = None):\n",
     "    \n",
@@ -64,8 +67,10 @@
     "                            company_set.add(tds[1].text)\n",
     "                            \n",
     "        print(f'found {len(company_set):,} companies')\n",
+    "        \n",
+    "        self.collected_companies['energy_companies'] = sorted(company_set)\n",
     "                        \n",
-    "        return company_set\n",
+    "        return self\n",
     "    \n",
     "    def get_water_companies(self, country: str = None):\n",
     "    \n",
@@ -102,7 +107,9 @@
     "                            \n",
     "        print(f'found {len(company_set):,} companies')\n",
     "                        \n",
-    "        return company_set\n",
+    "        self.collected_companies['water_companies'] = sorted(company_set)\n",
+    "                        \n",
+    "        return self\n",
     "    \n",
     "    def get_gas_companies(self, country: str = None):\n",
     "    \n",
@@ -129,12 +136,14 @@
     "\n",
     "        print(f'found {len(company_set):,} companies')\n",
     "        \n",
-    "        return company_set"
+    "        self.collected_companies['gas_companies'] = sorted(company_set)\n",
+    "                        \n",
+    "        return self"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 185,
    "id": "1eb69da0-84ec-425c-9dfc-72b2cb4e8115",
    "metadata": {},
    "outputs": [],
@@ -144,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 186,
    "id": "876c0097-79d2-4227-8404-9d4bd961d1b7",
    "metadata": {},
    "outputs": [
@@ -152,50 +161,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "found 23 companies\n"
+      "found 23 companies\n",
+      "found 159 companies\n",
+      "found 558 companies\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'British Gas',\n",
-       " 'British Natural Gas',\n",
-       " 'Bulb',\n",
-       " 'Centrica',\n",
-       " 'E.ON',\n",
-       " 'EDF Energy',\n",
-       " 'HM British Natural Gas',\n",
-       " 'London Energy',\n",
-       " 'Niccolo',\n",
-       " 'Npower',\n",
-       " 'Nwy Prydain',\n",
-       " 'Ovo Energy',\n",
-       " 'Powergen Retail',\n",
-       " 'RWE',\n",
-       " 'SSE',\n",
-       " 'SWEB Energy',\n",
-       " 'Scottish Gas',\n",
-       " 'Scottish Hydro',\n",
-       " 'Scottish Power',\n",
-       " 'Seeboard',\n",
-       " 'Southern Electric',\n",
-       " 'Swalec',\n",
-       " 'Total Gas & Power'}"
+       "<__main__.BillFinder at 0x108df9970>"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bf.get_gas_companies(country='UK')"
+    "bf.get_gas_companies(country='UK') \\\n",
+    "        .get_gas_companies(country='USA') \\\n",
+    "        .get_water_companies('USA')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4a744ebb-74dc-4428-b6be-68a216f79692",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bf.collected_companies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "857b77df-8ec0-4359-b505-5df294c6d4fa",
    "metadata": {},
    "outputs": [],
    "source": []
