fixed company count

--- a/billfinder.ipynb
+++ b/billfinder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 222,
    "id": "a1204c32-ee3c-4b1e-9a69-17448ed34ca0",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "import re\n",
     "from collections import defaultdict\n",
     "from unidecode import unidecode\n",
+    "from itertools import chain\n",
     "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 286,
    "id": "66b2c68f-ba3f-4d17-b8fd-8baa1ddd74f1",
    "metadata": {},
    "outputs": [],
@@ -35,9 +36,9 @@
     "        self.source_urls_gas = {'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_natural_gas_companies',\n",
     "                                'UK': 'https://en.wikipedia.org/wiki/List_of_British_natural_gas_companies'}\n",
     "        \n",
-    "        self.stop_words = 'company inc corporation ltd authority'.split()\n",
+    "        self.stop_words = 'company inc corp corporation ltd authority'.split()\n",
     "        \n",
-    "        self.collected_companies = defaultdict()\n",
+    "        self.collected_companies = defaultdict(list)\n",
     "    \n",
     "    def get_energy_companies(self, country: str = None):\n",
     "    \n",
@@ -66,9 +67,9 @@
     "                        if tds := row.find_all('td'):\n",
     "                            company_set.add(tds[1].text)\n",
     "                            \n",
-    "        print(f'found {len(company_set):,} companies')\n",
+    "        print(f'{country}: found {len(company_set):,} energy companies')\n",
     "        \n",
-    "        self.collected_companies['energy_companies'] = sorted(company_set)\n",
+    "        self.collected_companies['energy'].extend(sorted(company_set))\n",
     "                        \n",
     "        return self\n",
     "    \n",
@@ -105,9 +106,9 @@
     "                            company_set.add(item_.text)\n",
     "                        break\n",
     "                            \n",
-    "        print(f'found {len(company_set):,} companies')\n",
+    "        print(f'{country}: found {len(company_set):,} water companies')\n",
     "                        \n",
-    "        self.collected_companies['water_companies'] = sorted(company_set)\n",
+    "        self.collected_companies['water'].extend(sorted(company_set))\n",
     "                        \n",
     "        return self\n",
     "    \n",
@@ -134,9 +135,9 @@
     "                                        company_set.add(potential_name)\n",
     "                    break\n",
     "\n",
-    "        print(f'found {len(company_set):,} companies')\n",
+    "        print(f'{country}: found {len(company_set):,} gas companies')\n",
     "        \n",
-    "        self.collected_companies['gas_companies'] = sorted(company_set)\n",
+    "        self.collected_companies['gas'].extend(sorted(company_set))\n",
     "                        \n",
     "        return self\n",
     "    \n",
@@ -149,19 +150,21 @@
     "                if (len(w) > 2) and (w not in self.stop_words):\n",
     "                    okayed_name_parts.append(w)\n",
     "        \n",
-    "        return ' '.join(okayed_name_parts)\n",
+    "        return ' '.join(okayed_name_parts).strip()\n",
     "    \n",
     "    def review_company_names(self):\n",
     "        \n",
     "        for company_type in self.collected_companies:\n",
     "            self.collected_companies[company_type] = sorted({normalised for name in self.collected_companies[company_type] if (normalised := self.normalise(name))})\n",
-    "        \n",
+    "            \n",
+    "        print(f'collected {sum({len(self.collected_companies[company_type]) for company_type in self.collected_companies}):,} unique companies')\n",
+    "\n",
     "        return self"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 287,
    "id": "1eb69da0-84ec-425c-9dfc-72b2cb4e8115",
    "metadata": {},
    "outputs": [],
@@ -171,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 288,
    "id": "876c0097-79d2-4227-8404-9d4bd961d1b7",
    "metadata": {},
    "outputs": [
@@ -179,19 +182,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "found 23 companies\n",
-      "found 159 companies\n",
-      "found 558 companies\n",
-      "found 30 companies\n"
+      "UK: found 23 gas companies\n",
+      "USA: found 159 gas companies\n",
+      "USA: found 558 water companies\n",
+      "UK: found 30 water companies\n",
+      "collected 762 unique companies\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.BillFinder at 0x1081b4730>"
+       "<__main__.BillFinder at 0x109dd6e80>"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,218 +207,6 @@
     "        .get_water_companies('UK') \\\n",
     "        .review_company_names()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 210,
-   "id": "4a744ebb-74dc-4428-b6be-68a216f79692",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(None,\n",
-       "            {'gas_companies': ['aquila',\n",
-       "              'arkansas oklahoma gas',\n",
-       "              'atmos energy',\n",
-       "              'avista utilities',\n",
-       "              'bangor gas',\n",
-       "              'berkshire gas',\n",
-       "              'black hills energy',\n",
-       "              'blackstone gas',\n",
-       "              'bluefield natural gas',\n",
-       "              'cascade natural gas',\n",
-       "              'centerpoint energy',\n",
-       "              'centerpoint energy florida gas transmission',\n",
-       "              'centerpoint energy gas transmission',\n",
-       "              'central hudson gas electric',\n",
-       "              'chesapeake energy',\n",
-       "              'chesapeake operating',\n",
-       "              'chesapeake utilities',\n",
-       "              'chester county gas',\n",
-       "              'city ellensburg',\n",
-       "              'city long beach gas oil department',\n",
-       "              'city norwich department public utilities',\n",
-       "              'city palo alto gas department',\n",
-       "              'city utilities springfield',\n",
-       "              'cnx resources',\n",
-       "              'colonial gas',\n",
-       "              'columbia gas',\n",
-       "              'columbia gas maryland',\n",
-       "              'columbia gas massachusetts',\n",
-       "              'columbia gas ohio',\n",
-       "              'columbia gas virginia',\n",
-       "              'conocophillips',\n",
-       "              'consolidated edison',\n",
-       "              'consumers energy',\n",
-       "              'coserv gas',\n",
-       "              'cut bank gas',\n",
-       "              'delmarva power',\n",
-       "              'direct energy',\n",
-       "              'dominion',\n",
-       "              'dominion carolina gas transmission',\n",
-       "              'dominion energy',\n",
-       "              'dte energy',\n",
-       "              'duke energy',\n",
-       "              'east ohio gas',\n",
-       "              'elizabethtown gas',\n",
-       "              'energies',\n",
-       "              'energir',\n",
-       "              'energy',\n",
-       "              'energy west montana',\n",
-       "              'enstar natural gas',\n",
-       "              'entergy',\n",
-       "              'eqt',\n",
-       "              'eversource energy',\n",
-       "              'eversource energy (via yankee gas)',\n",
-       "              'fairbanks natural gas',\n",
-       "              'florida gas transmission',\n",
-       "              'florida public utilities',\n",
-       "              'fort hill natural gas',\n",
-       "              'fountain inn natural gas',\n",
-       "              'frontier natural gas',\n",
-       "              'gas south',\n",
-       "              'gulf south pipe line',\n",
-       "              'hawaii gas',\n",
-       "              'holyoke gas and electric',\n",
-       "              'hudson energy',\n",
-       "              'illinois gas transmission',\n",
-       "              'integrys',\n",
-       "              'intermountain gas',\n",
-       "              'kansas gas service',\n",
-       "              'kinder morgan',\n",
-       "              'laclede gas',\n",
-       "              'lake apopka natural gas',\n",
-       "              'lewis energy',\n",
-       "              'liberty utilities',\n",
-       "              'llc',\n",
-       "              'madison gas electric',\n",
-       "              'maine natural gas',\n",
-       "              'mdu resources',\n",
-       "              'metl',\n",
-       "              'metropolitan utilities district',\n",
-       "              'midamerican energy',\n",
-       "              'middleboro municipal gas and electric department',\n",
-       "              'mirabito gas',\n",
-       "              'mississippi river transmission',\n",
-       "              'missouri gas energy',\n",
-       "              'mountaineer gas',\n",
-       "              'murex petroleum',\n",
-       "              'national fuel gas',\n",
-       "              'national grid',\n",
-       "              'national grid usa',\n",
-       "              'new jersey natural',\n",
-       "              'new jersey resources',\n",
-       "              'new mexico gas (nmg)',\n",
-       "              'new york state electric gas (nyseg)',\n",
-       "              'nicor gas',\n",
-       "              'nisource',\n",
-       "              'north shore gas',\n",
-       "              'northeast ohio natural gas',\n",
-       "              'northwest natural gas',\n",
-       "              'northwestern',\n",
-       "              'oklahoma gas electric',\n",
-       "              'oklahoma natural gas',\n",
-       "              'oneok',\n",
-       "              'oro negro',\n",
-       "              'orwell natural gas',\n",
-       "              'pacific gas electric',\n",
-       "              'panhandle eastern pipe line',\n",
-       "              'paso natural gas',\n",
-       "              'patara oil gas',\n",
-       "              'patara oil gas llc',\n",
-       "              'patriots energy group',\n",
-       "              'peco energy',\n",
-       "              'peoples gas',\n",
-       "              'peoples natural gas',\n",
-       "              'philadelphia gas works',\n",
-       "              'piedmont natural gas',\n",
-       "              'public service electric and gas (pse&g)',\n",
-       "              'public service enterprise group',\n",
-       "              'public service north carolina (psnc)',\n",
-       "              'puget sound energy',\n",
-       "              'rochester gas electric (rg&e)',\n",
-       "              'san diego gas electric',\n",
-       "              'scana lancaster county natural gas',\n",
-       "              'sce&g',\n",
-       "              'semco energy',\n",
-       "              'sienergy',\n",
-       "              'sierra pacific',\n",
-       "              'sourcegas arkansas',\n",
-       "              'sourcegas distribution',\n",
-       "              'south jersey industries',\n",
-       "              'southern california gas',\n",
-       "              'southern gas',\n",
-       "              'southwest gas',\n",
-       "              'spectra energy',\n",
-       "              'spire',\n",
-       "              'summit natural gas',\n",
-       "              'teco peoples gas',\n",
-       "              'texas gas service',\n",
-       "              'texas natural gas',\n",
-       "              'transcanada',\n",
-       "              'transwestern pipeline',\n",
-       "              'trunkline gas',\n",
-       "              'ugi',\n",
-       "              'uil holdings corp (via connecticut natural gas and southern connecticut gas)',\n",
-       "              'unitil',\n",
-       "              'unitil corp',\n",
-       "              'vectrennipsco',\n",
-       "              'virginia natural gas',\n",
-       "              'wakefield municipal gas and light department',\n",
-       "              'washington gas',\n",
-       "              'westfield gas and electric department',\n",
-       "              'xcel energy',\n",
-       "              'xoom energy',\n",
-       "              'york county gas'],\n",
-       "             'water_companies': ['affinity water',\n",
-       "              'albion water',\n",
-       "              'anglian water',\n",
-       "              'bournemouth water',\n",
-       "              'bristol water',\n",
-       "              'cambridge water',\n",
-       "              'cholderton and district water',\n",
-       "              'dŵr cymru welsh water',\n",
-       "              'essex and suffolk water',\n",
-       "              'everflow[2]',\n",
-       "              'guernsey water (government)',\n",
-       "              'hafren dyfrdwy',\n",
-       "              'hartlepool water',\n",
-       "              'isle man water (government)',\n",
-       "              'jersey water (private)',\n",
-       "              'northern ireland water (government)',\n",
-       "              'northumbrian water',\n",
-       "              'portsmouth water',\n",
-       "              'scottish water (government)',\n",
-       "              'severn trent water',\n",
-       "              'south east water',\n",
-       "              'south staffordshire water',\n",
-       "              'south west water',\n",
-       "              'southern water',\n",
-       "              'sutton and east surrey water',\n",
-       "              'thames water',\n",
-       "              'united utilities',\n",
-       "              'wessex water',\n",
-       "              'yorkshire water',\n",
-       "              'youlgrave waterworks']})"
-      ]
-     },
-     "execution_count": 210,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bf.collected_companies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "857b77df-8ec0-4359-b505-5df294c6d4fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
