--- a/billfinder.ipynb
+++ b/billfinder.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 327,
    "id": "66b2c68f-ba3f-4d17-b8fd-8baa1ddd74f1",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
     "        self.source_urls_gas = {'USA': 'https://en.wikipedia.org/wiki/List_of_United_States_natural_gas_companies',\n",
     "                                'UK': 'https://en.wikipedia.org/wiki/List_of_British_natural_gas_companies'}\n",
     "        \n",
-    "        self.stop_words = 'company inc corp corporation ltd authority'.split()\n",
+    "        self.stop_words = 'company inc corp corporation ltd authority llc district department commission cooperative association limited'.split()\n",
     "        \n",
     "        self.collected_companies = defaultdict(list)\n",
     "    \n",
@@ -150,7 +150,12 @@
     "                if (len(w) > 2) and (w not in self.stop_words):\n",
     "                    okayed_name_parts.append(w)\n",
     "        \n",
-    "        return ' '.join(okayed_name_parts).strip()\n",
+    "        s = ' '.join(okayed_name_parts).split('[')[0]\n",
+    "        \n",
+    "        if ('(via ' not in s) and ('(' in s):\n",
+    "            s = s.split('(')[0]\n",
+    "            \n",
+    "        return s.strip()\n",
     "    \n",
     "    def review_company_names(self):\n",
     "        \n",
@@ -164,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 328,
    "id": "1eb69da0-84ec-425c-9dfc-72b2cb4e8115",
    "metadata": {},
    "outputs": [],
@@ -174,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 329,
    "id": "876c0097-79d2-4227-8404-9d4bd961d1b7",
    "metadata": {},
    "outputs": [
@@ -186,16 +191,19 @@
       "USA: found 159 gas companies\n",
       "USA: found 558 water companies\n",
       "UK: found 30 water companies\n",
-      "collected 762 unique companies\n"
+      "USA: found 613 energy companies\n",
+      "UK: found 75 energy companies\n",
+      "Canada: found 96 energy companies\n",
+      "collected 1,522 unique companies\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.BillFinder at 0x109dd6e80>"
+       "<__main__.BillFinder at 0x1091890a0>"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 329,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +213,20 @@
     "        .get_gas_companies(country='USA') \\\n",
     "        .get_water_companies('USA') \\\n",
     "        .get_water_companies('UK') \\\n",
+    "        .get_energy_companies('USA') \\\n",
+    "        .get_energy_companies('UK') \\\n",
+    "        .get_energy_companies('Canada') \\\n",
     "        .review_company_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb84a182-20e1-4816-8f1b-b72617093435",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bf.collected_companies['energy']"
    ]
   }
  ],
